--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"compression": "^1.8.1",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
+		"crypto": "^1.0.1",
 		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
 		"express-async-handler": "^1.2.0",
@@ -27,6 +28,9 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.19.1",
 		"multer": "^2.0.2",
-		"nodemon": "^3.1.10"
+		"nodemailer": "^7.0.9",
+		"nodemon": "^3.1.10",
+		"razorpay": "^2.9.6",
+		"socket.io": "^4.8.1"
 	}
 }
