--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,15 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.545.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.31.0",
