--- a/client/src/.env
+++ b/client/src/.env
@@ -6,4 +6,4 @@ VITE_API_BASE_URL=http://localhost:8000/api
 VITE_SOCKET_URL=http://localhost:8000
 VITE_RAZORPAY_KEY_ID=rzp_test_ROHjDsLS2VVDeE
 
-const API_BASE_URL = import.meta.env.VITE_API_BASE_URL || "http://localhost:8000/api";
+API_BASE_URL = import.meta.env.VITE_API_BASE_URL || "http://localhost:8000/api";
