--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"type": "commonjs",
 	"dependencies": {
+		"@google/generative-ai": "^0.24.1",
 		"bcrypt": "^6.0.0",
 		"bcryptjs": "^3.0.2",
 		"cloudinary": "^2.7.0",
