--- a/server/package.json
+++ b/server/package.json
@@ -26,9 +26,11 @@
 		"express-rate-limit": "^8.1.0",
 		"express-validator": "^7.2.1",
 		"helmet": "^8.1.0",
+		"imagekit": "^6.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.19.1",
 		"multer": "^2.0.2",
+		"node-fetch": "^3.3.2",
 		"nodemailer": "^7.0.9",
 		"nodemon": "^3.1.10",
 		"razorpay": "^2.9.6",
