--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,4 @@
 # Vite client envs (loaded at build-time)
-# VITE_API_BASE_URL=http://192.168.1.34:8000/api
-VITE_API_BASE_URL=http://localhost:8000/api
-VITE_SOCKET_URL=http://localhost:8000
+VITE_API_BASE_URL=https://localhost:8000/api
+VITE_SOCKET_URL=https://localhost:8000
 VITE_RAZORPAY_KEY_ID=rzp_test_ROHjDsLS2VVDeE
